--- a/app/src/main/res/layout/activity_picture.xml
+++ b/app/src/main/res/layout/activity_picture.xml
@@ -7,11 +7,17 @@
     app:srlEnableLoadMore="false"
     app:srlEnableRefresh="false">
 
-    <com.github.chrisbanes.photoview.PhotoView
-        android:id="@+id/iv_picture"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:background="@android:color/black" />
+        android:background="@android:color/black">
+
+        <com.github.chrisbanes.photoview.PhotoView
+            android:id="@+id/iv_picture"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center" />
+
+    </FrameLayout>
 
 </com.scwang.smartrefresh.layout.SmartRefreshLayout>
