--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/main_read"
+        android:orderInCategory="1"
+        android:title="@string/menu_main_read"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/main_history"
         android:orderInCategory="1"
         android:title="@string/menu_main_history"
