--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="gank_data_desc">#FF737373</color>
     <color name="gank_daily_title">#FF000000</color>
 
+    <color name="tabTextColorNormal">#666666</color>
+
     <color name="status_text">#9d9d9d</color>
 
 </resources>
