--- a/app/src/main/res/layout/activity_time_read.xml
+++ b/app/src/main/res/layout/activity_time_read.xml
@@ -31,4 +31,13 @@
         android:scaleType="fitXY"
         android:src="@drawable/tab_shadow" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/time_read_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="@color/colorPrimary"
+        app:srcCompat="@drawable/ic_action_edit" />
+
 </FrameLayout>
