--- a/app/src/main/res/layout/activity_time_read.xml
+++ b/app/src/main/res/layout/activity_time_read.xml
@@ -1,43 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/time_read_content"
+    android:id="@id/refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:visibility="invisible">
+    app:srlEnableLoadMore="false"
+    app:srlEnableRefresh="false">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/time_read_tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/tabLayoutHeight"
-        android:background="@android:color/white"
-        app:tabIndicatorColor="@color/colorPrimary"
-        app:tabSelectedTextColor="@color/colorPrimary"
-        app:tabTextAppearance="@style/TabLayoutTextStyle"
-        app:tabTextColor="@color/tabTextColorNormal" />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/time_read_view_pager"
+    <FrameLayout
+        android:id="@+id/time_read_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/tabLayoutHeight"
-        android:overScrollMode="never"
-        android:scrollbars="none" />
+        android:visibility="invisible">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/tabLayoutHeight"
-        android:scaleType="fitXY"
-        android:src="@drawable/tab_shadow" />
+        <android.support.design.widget.TabLayout
+            android:id="@+id/time_read_tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tabLayoutHeight"
+            android:background="@android:color/white"
+            app:tabIndicatorColor="@color/colorPrimary"
+            app:tabSelectedTextColor="@color/colorPrimary"
+            app:tabTextAppearance="@style/TabLayoutTextStyle"
+            app:tabTextColor="@color/tabTextColorNormal" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/time_read_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@color/colorPrimary"
-        app:srcCompat="@drawable/ic_action_edit" />
+        <android.support.v4.view.ViewPager
+            android:id="@+id/time_read_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/tabLayoutHeight"
+            android:overScrollMode="never"
+            android:scrollbars="none" />
 
-</FrameLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/tabLayoutHeight"
+            android:scaleType="fitXY"
+            android:src="@drawable/tab_shadow" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/time_read_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            app:backgroundTint="@color/colorPrimary"
+            app:srcCompat="@drawable/ic_action_edit" />
+
+    </FrameLayout>
+
+</com.scwang.smartrefresh.layout.SmartRefreshLayout>
