--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -8,6 +8,7 @@
     app:srlEnableRefresh="false">
 
     <FrameLayout
+        android:id="@+id/web_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
