--- a/app/src/main/res/layout/fragment_idle_reading.xml
+++ b/app/src/main/res/layout/fragment_idle_reading.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/time_read_list"
+        android:id="@+id/idle_reading_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="never" />
