--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,6 +41,13 @@
         <item name="android:textColor">@android:color/black</item>
     </style>
 
+    <style name="CardViewStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="cardCornerRadius">@dimen/card_corner_radius</item>
+        <item name="cardElevation">@dimen/card_elevation</item>
+    </style>
+
     <style name="AuthorStyle">
         <item name="android:textStyle">italic</item>
         <item name="android:typeface">serif</item>
