--- a/app/src/main/res/layout/layout_item_gank_data_welfare.xml
+++ b/app/src/main/res/layout/layout_item_gank_data_welfare.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:background="?android:attr/selectableItemBackground"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:scaleType="centerInside" />
 
 </android.support.v7.widget.CardView>
