--- a/app/src/main/res/layout/layout_item_idle_reading.xml
+++ b/app/src/main/res/layout/layout_item_idle_reading.xml
@@ -6,7 +6,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/selectableItemBackground"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="10dp">
 
         <ImageView
