--- a/app/src/main/res/layout/layout_item_idle_reading_filter.xml
+++ b/app/src/main/res/layout/layout_item_idle_reading_filter.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:attr/selectableItemBackground"
+    android:background="?attr/selectableItemBackgroundBorderless"
     android:gravity="center_vertical"
     android:minHeight="45dp"
     android:orientation="horizontal"
