--- a/app/src/main/res/layout/layout_item_gank_data_welfare.xml
+++ b/app/src/main/res/layout/layout_item_gank_data_welfare.xml
@@ -2,12 +2,30 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/CardViewStyle">
 
-    <ImageView
-        android:id="@+id/gank_data_picture"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:scaleType="centerInside" />
+        android:background="?attr/selectableItemBackgroundBorderless">
+
+        <ImageView
+            android:id="@+id/gank_data_picture"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="centerInside" />
+
+        <TextView
+            android:id="@+id/gank_data_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="#80000000"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:textStyle="italic"
+            android:typeface="serif" />
+
+    </FrameLayout>
+
 
 </android.support.v7.widget.CardView>
