--- a/app/src/main/res/drawable/bg_navigation_header.xml
+++ b/app/src/main/res/drawable/bg_navigation_header.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="135"
-        android:centerColor="#0065BF"
-        android:endColor="#007BEA"
-        android:startColor="#093964"
+        android:angle="315"
+        android:centerColor="#034281"
+        android:endColor="#051a30"
+        android:startColor="#0086FF"
         android:type="linear" />
 </shape>
