--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,11 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@drawable/bg_navigation_header"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/layout_main_navigation_header"
+        app:itemIconTint="@android:color/white"
+        app:itemTextColor="@android:color/white"
         app:menu="@menu/menu_navigation" />
 
 </android.support.v4.widget.DrawerLayout>
