--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -6,5 +6,6 @@
     <item name="title" type="id" />
     <item name="subtitle" type="id" />
     <item name="refresh_layout" type="id" />
+    <item name="glide_tag_id" type="id" />
 
 </resources>
