--- a/app/src/main/res/layout/layout_main_navigation_header.xml
+++ b/app/src/main/res/layout/layout_main_navigation_header.xml
@@ -15,8 +15,11 @@
         android:id="@+id/navigation_header_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
+        android:adjustViewBounds="true"
         android:contentDescription="@string/navigation_header_title"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:maxHeight="48dp"
+        android:maxWidth="48dp"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
