--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,16 @@
     <color name="gank_data_desc">#FF737373</color>
     <color name="gank_daily_title">#FF000000</color>
 
+    <color name="color_type_all">#00000000</color>
+    <color name="color_type_welfare">#FFFF4081</color>
+    <color name="color_type_android">#FF0086FF</color>
+    <color name="color_type_ios">#FF2E4EDA</color>
+    <color name="color_type_js">#FFFF5722</color>
+    <color name="color_type_video">#FFB92C00</color>
+    <color name="color_type_resources">#FF02AE9E</color>
+    <color name="color_type_app">#FF147002</color>
+    <color name="color_type_recommend">#FF8BC34A</color>
+
     <color name="tabTextColorNormal">#666666</color>
 
     <color name="status_text">#9d9d9d</color>
