--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,13 @@
 
     <color name="status_text">#9d9d9d</color>
 
+    <color name="about_app_name">#FF191919</color>
+    <color name="about_app_version">#FF999999</color>
+    <color name="about_item_line">#eae9e9</color>
+    <color name="about_category_bg">#f1f1f1</color>
+    <color name="about_category_title">#757575</color>
+    <color name="about_title_color">#de000000</color>
+    <color name="about_link_color">#0086FF</color>
+    <color name="about_desc_color">#757575</color>
+
 </resources>
