--- a/app/src/main/res/menu/menu_about.xml
+++ b/app/src/main/res/menu/menu_about.xml
@@ -6,7 +6,7 @@
         android:id="@+id/about_share"
         android:icon="@drawable/ic_menu_share"
         android:orderInCategory="2"
-        android:title="@string/menu_about_share"
+        android:title="@string/menu_share"
         app:showAsAction="always" />
 
 </menu>
