--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,21 +4,21 @@
     <item
         android:id="@+id/main_read"
         android:orderInCategory="1"
-        android:title="@string/menu_main_read"
+        android:title="@string/menu_read"
         app:showAsAction="never" />
     <item
         android:id="@+id/main_history"
         android:orderInCategory="1"
-        android:title="@string/menu_main_history"
+        android:title="@string/menu_history"
         app:showAsAction="never" />
     <item
         android:id="@+id/main_gankio"
         android:orderInCategory="1"
-        android:title="@string/menu_main_gankio"
+        android:title="@string/menu_gankio"
         app:showAsAction="never" />
     <item
         android:id="@+id/main_github"
         android:orderInCategory="1"
-        android:title="@string/menu_main_github"
+        android:title="@string/menu_github"
         app:showAsAction="never" />
 </menu>
