--- a/app/src/main/res/menu/menu_read.xml
+++ b/app/src/main/res/menu/menu_read.xml
@@ -6,7 +6,7 @@
         android:id="@+id/read_filter"
         android:icon="@drawable/ic_menu_filter"
         android:orderInCategory="2"
-        android:title="@string/menu_read_filter"
+        android:title="@string/menu_filter"
         app:showAsAction="always" />
 
 </menu>
