--- a/app/src/main/res/layout/layout_main_content.xml
+++ b/app/src/main/res/layout/layout_main_content.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize" />
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/main_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
